# corral

./: .gitignore  DESIGN.md  README.md  SECURITY.md  chat.js  connectproxy.js  demo.js  package-lock.json  package.json  phone.js  playwright.config.mjs  projects.js  push.js  queue.js  remote.js  server.js  servers.example.json  tui.mjs  tunnels.js  vite.config.mjs  wake.js  webpush.js
.github/workflows/: android-apk.yml  ci.yml  release.yml
agents/: claude.js  codex.js  common.js  opencode.js
docs/: ROADMAP.md  agent-integration-notes.md
docs/media/: corral-files-changes.webm  corral-fleet-chat.webm  corral-tunnels.webm
scripts/: fetch-pocket-runtime.sh  prepare-pocket.mjs  prepare-sidecar.mjs  run-tests.mjs
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.android.conf.json  tauri.conf.json
src-tauri/android/: PocketBridge.kt  PocketService.kt
src-tauri/capabilities/: default.json  desktop.json  remote.json
src-tauri/src/: lib.rs  pocket.rs
tests/: phone-smoke.spec.mjs
web/: index.html
web/public/: manifest.webmanifest  sw.js
web/src/: App.svelte  Chat.svelte  CommandPalette.svelte  Dashboard.svelte  DirPicker.svelte  Files.svelte  FleetGrid.svelte  FleetTile.svelte  History.svelte  Hosts.svelte  PushSettings.svelte  RemoteAccess.svelte  Root.svelte  Sessions.svelte  Terminal.svelte  Tunnels.svelte  app.css  main.js  prose.css  tokens.css
web/src/lib/: Icon.svelte  Shader.svelte  Titlebar.svelte  Toasts.svelte  api.js  apiClient.mjs  apiMutations.test.mjs  apiRequest.mjs  apiRequest.test.mjs  appShell.mjs  appShell.test.mjs  appUpdate.mjs  appUpdate.test.mjs  changeSummary.mjs  changeSummary.test.mjs  chatStream.mjs  chatStream.test.mjs  clipboardAction.mjs  clipboardAction.test.mjs  commandItems.mjs  commandItems.test.mjs  commandPaletteKeys.mjs  commandPaletteKeys.test.mjs  dashboardCss.test.mjs  dashboardRecentProjects.mjs  dashboardRecentProjects.test.mjs  dashboardToday.mjs  dashboardToday.test.mjs  desktopUpdate.mjs  desktopUpdate.test.mjs  dirPickerPath.mjs  dirPickerPath.test.mjs  externalOpen.mjs  externalOpen.test.mjs  fileActions.mjs  fileActions.test.mjs  filePathInput.mjs  filePathInput.test.mjs  fileUploads.mjs  fileUploads.test.mjs  (+38 more)
web/src/mobile/: Connect.svelte  FleetFeed.svelte  Herd.svelte  LaunchSheet.svelte  MobileChat.svelte  MobileShell.svelte  QueueScreen.svelte  ReviewScreen.svelte  SearchScreen.svelte  Sheet.svelte  data.svelte.js  nav.svelte.js
