[package]
name = "corral"
version = "0.5.0"
description = "Ranch your AI coding agents"
authors = ["Mark Marosi"]
license = "MIT"
repository = "https://github.com/Mapika/corral"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
# Compiled for every target so capability validation sees their permissions, but only the mobile
# shell registers them: deep-link receives corral:// notification taps, opener launches the
# system browser for the release page.
tauri-plugin-deep-link = "2"
tauri-plugin-opener = "2"

# Desktop-only: tray, sidecar shell, global shortcut, single instance, token minting. The mobile
# app is a thin paired client (see lib.rs) and must not pull these in — several don't compile on
# Android/iOS at all.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri = { version = "2.11.3", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
rand = "0.8"
hex = "0.4"

# Android-only: the pocket runtime (on-device backend) — token minting, payload extraction,
# process control. See src/pocket.rs.
[target.'cfg(target_os = "android")'.dependencies]
rand = "0.8"
hex = "0.4"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
tar = "0.4"
libc = "0.2"
jni = "0.21"
# liblog FFI, no JNI: tauri-plugin-log's Android path forwards every record through its Kotlin
# plugin over JNI and melted down the webview (weak-global-ref overflow) — see pocket.rs.
android_logger = "0.14"
